--- a/src/components/topbar.css
+++ b/src/components/topbar.css
@@ -4,6 +4,10 @@
   background-color: white;
   position: sticky;
   top: 0;
+  box-shadow: 1px -10px 38px -1px rgba(0, 0, 0, 0.28);
+  -webkit-box-shadow: 1px -10px 38px -1px rgba(0, 0, 0, 0.28);
+  -moz-box-shadow: 1px -10px 38px -1px rgba(0, 0, 0, 0.28);
+  z-index: 10;
 }
 
 .topbarWrapper {
