--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,3 +1,5 @@
+/* TopBar */
+
 .topbar {
   width: 100%;
   height: 50px;
@@ -58,4 +60,58 @@
   border-radius: 50%;
   cursor: pointer;
   object-fit: cover;
+}
+
+/* Pages */
+.page-container {
+  flex: 4;
+  margin: 15px 20px;
+}
+
+/* Sidebar */
+.sidebar {
+  flex: 1;
+  height: calc(100vh - 50px);
+  background-color: rgb(248, 248, 248);
+  position: sticky;
+  top: 50px;
+}
+
+.sidebarWrapper {
+  padding: 20px;
+  color: #555;
+}
+
+.sidebarMenu {
+  margin-bottom: 10px;
+  align-items: center;
+}
+
+.sidebarTitle {
+  font-size: 15px;
+  color: rgb(73, 73, 73);
+}
+
+.sidebarList {
+  list-style: none;
+  padding: 5px;
+}
+
+.sidebarListItem {
+  padding: 5px;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  border-radius: 5px;
+  margin: 5px 0;
+}
+
+.list-item {
+  text-decoration: none;
+  margin-right: 5px;
+}
+
+.sidebarListItem.active,
+.sidebarListItem:hover {
+  background-color: rgb(238, 238, 238);
 }
